--- a/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
+++ b/01-HTML-CSS/05-grid/Andrew&Ohad&John/style.css
@@ -61,10 +61,9 @@ h3{
 .bigArcticle{
   background-size: cover;
   width: 45vw;
-  height: 50vh;
+  height: 45vh;
   grid-row: 1 / 3;
   overflow: auto;
-
 }
 
 .bigArcticle.home{
@@ -74,6 +73,7 @@ h3{
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  padding: 1rem;
 }
 .pic1{
   background-image:  linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(255,255,255,0) 100%),
@@ -99,11 +99,11 @@ h3{
 
 .midArcticle.home{
   background-size: cover;
-  height: 23vh;
+  height: 20vh;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-
+  padding: 1rem;
 }
 .midArcticle.news{
   height: 50vh;
