--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style1.css
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style1.css
@@ -1,92 +1,285 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@600&display=swap');
 
 body {
-    margin: 0;
-    background:white;
-    font-family: 'Montserrat', sans-serif;
+    
+    background-color: rgb(230, 226, 221);
+    font-family: 'Outfit', sans-serif;
     font-weight: 900;
-    
-    
+      
     
 }
 
-.nav-bar {
-    width: 80%;
-    height: 70px;
-    margin: 0 auto;
+a{
+  color: black;
+  font-family: 'Courgette', cursive;
+  text-decoration: none;
+}
+a:hover{
+  color: rgb(202, 163, 238); 
+  background-color: black;
+  padding: 5px;
+  border-radius: 5px;
+}
+.bar{
+display: flex;
+justify-content: start;
+min-width: 100%;
+padding: 10px;
+gap: 10px;
+}
+.nav{
+  padding: 0 10px;
+}
+.box_d>p{
+width: 50%;
+}
+.nav:hover{
+  transform: translateY(-3px);
+ 
 }
 
-header {
-    background: red;
-    height: 55px;
-    padding: 5px;
-    margin: 10px;
-  }
-  
-  header::after {
-    content: '';
-    display: table;
-    clear: both;
-  }
-  
-  .logo {
-    display: flex;
-    justify-content: center;
-    justify-items: center;
-    padding: 5px 0;
-    margin: 0px;
-    
+.logo:hover{
+  transform: translateY(-3px);
+ 
+}
+.logo>a:hover{
+  background-color: transparent;
+}
+
     
 
-  }
-  
-  nav {
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    margin-top: -40px;
-  }
-  
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  nav li {
-    display: inline-block;
-    margin-left: 70px;
-    padding-top: 0px;
+  .container {
+    height: 200vh;
+    width: 98vw;
+    padding: 0px;
+    margin-left: -2px;
     
-  
-    position: relative;
   }
-  
-  nav a {
-    color: black;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 18px;
+
+
+  .grid-1{
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    background-color: gray;
+    
+    
+    
   }
-  
-  nav a:hover {
-    color: #000;
+
+
+  .box1-grid-1 {
+    
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
   }
-  
-  nav a::before {
-    content: '';
-    display: block;
-    height: 2px;
-    background-color: black;
-  
-    position: absolute;
-    top: 0;
-    width: 0%;
-  
-    transition: all ease-in-out 250ms;
+
+
+
+  .box3-grid-1{
+    grid-column: 1/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
   }
-  
-  nav a:hover::before {
+
+ 
+
+
+  .box5-grid-1 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+  }
+
+
+  .grid-2 {
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    margin-top: 30px;
+    
+   
+    
+  }
+
+  .box1-grid-2 {
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+  }
+
+
+  .box3-grid-2 {
+    grid-row: 2/4;
+    
+    
+    
+    
+  }
+
+
+  .box4-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
+    
+  }
+
+
+  .box5-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    
+    
+    
+    
+    
+  }
+
+  .box1-grid-1 .img{
+    width: 50%;
+    height: 100%;
+    
+    
+  }
+
+
+  .box2-grid-1 .img{
+    
     width: 100%;
+    height: 100%;
   }
+
+  .box3-grid-1 .img{
+    width: 50%;
+    height: 100%;
+    margin-right: -60px;
   
+  }
+
+  .box4-grid-1 .img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .box5-grid-1 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+  .box1-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+  .box2-grid-2 .img{
+    width: 100%;
+    height: 100%;
+  }
+  .box3-grid-2 .img{
+    width: 100%;
+    height: 60%;
+  
+  }
+
+  .box4-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+
+  .box5-grid-2 .img{
+    width: 50%;
+    height: 100%;
+  }
+
+
+    
+  
+
+
+  .img>img{
+    position: relative;
+    border-radius: 3px;
+    width: 90%;
+    height: 90%;
+    left: 30px;
+    top: 10px;
+    
+  
+  }
+  .text {
+    
+    position: relative;
+    right: 20px;
+    width: 48%;
+    height: 80%;
+    margin-left: 5px;
+    margin-top: 3px;
+    cursor: pointer;
+    
+    
+  }
+
+
+
+
+  span:hover {
+
+    text-decoration: underline;
+  }
+
+
+  .text>p{
+    
+    width: 100%;
+    height: 100%;
+    
+  
+  }
+
+  span{
+    font-size: x-large;
+    
+    align-content: center;
+
+    
+  }
+
+  
+.textp{
+  padding: 0px;
+  margin-left: 45px;
+  margin-top: -10px;
+  width: 500px;
+}
+
