--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/News_Lior.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/News_Lior.css
@@ -1,11 +1,15 @@
+body{
+    align-items: center;
+    font-family: 'Outfit', sans-serif;
+}
+
 .container
 {
     width: 100%;
     height: 100vh;
-    border: 3px solid black;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: 2fr repeat(3,2fr) ;
     grid-template-rows: repeat(3,1fr);
     grid-gap: 1em;
 
@@ -13,33 +17,158 @@
 
 .box
 {
-    background-color: silver;
-    padding: 1em;
+    padding: 5px;
+    grid-auto-rows: minmax(10px, auto);
     border: 3px solid black;
 }
 
 .box1
 {
     grid-column: 1/4;
-    display: flex;
-
 }
 
-h1
+.internal_box1
 {
+    display: grid;
+    width: 100%;
+    margin: 0;
+    height: 30vh;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.Header1
+{
+    grid-column: 1/2;
+    grid-row: 1/3;
+    align-items: start;
     font-size: 30px;
-    position: relative;
-    border: 3px solid black;
-    align-items: left;
-    width: 25vw;
-    height: 10vh;
+
+
 }
 
 .image1
 {
-    position: relative;
-    width: 25vw;
+    grid-column: 2/6;
+    grid-row: 1/4;
+    width: 90%;
+    height: 25vh;
+    align-items: left;
+}
+
+.text1
+{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.box10
+{
+    display: flex;
+    flex-direction: column;
+    width: 80%;
     height: 40vh;
-    border: 3px solid black;
-    left: 30px;
+    gap: 0;
+
+}
+
+.down_picture
+{
+    width: 100%;
+    height: 15vh;
+}
+
+
+.down_title
+{
+    width: 100%;
+    height: 7vh;
+    text-align: left;
+}
+
+.down_text
+{
+    width: 60%;
+    height: 13vh;
+    align-items: center;
+    position: relative;
+    left: 0vw;
+    bottom: 5vh;
+    align-content: center;
+    text-align: left;
+}
+
+.down_title:hover
+{
+     cursor: pointer;
+     color: blue;
+    text-decoration: underline;
+}
+
+.down_title
+{
+    font-size: 20px;
+    font-style: italic;
+}
+
+.down_text
+{
+    font-size: 15px;
+    font-style: italic;
+}
+
+.banner
+{
+    width: 100%;
+    height: 4vh;
+    background-color: rgb(245, 23, 23);
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+    font-weight: 200;
+}
+
+.navbar
+{
+   width: 85%;
+   margin: auto;
+   position: relative;
+   align-items: center; 
+   justify-content: space-between;
+}
+
+
+.navbar ul li
+{
+    list-style: none;
+    font-size: 10px;
+    display: inline-block;
+    margin: 0 50px;
+    position: relative;
+}
+
+.navbar ul li a
+{
+    text-decoration: none;
+    color:rgb(247, 245, 240);
+    font-weight: 200;
+    font-size: 2vh;
+    text-transform: uppercase;
+}
+
+.navbar ul li ::after
+{
+    content: '';
+    height: 5px;
+    width: 0;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+    transition: 0.8s;
+}
+
+.navbar ul li:hover ::after
+{
+    width: 100%;
 }
