--- a/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
+++ b/01-HTML-CSS/05-grid/Or&Michael&Lior/style.css
@@ -1,24 +1,43 @@
-.menuwrapper{
-    height: 3vh;
-    display: flex;
-    background-color: rgb(255, 255, 255);
-    justify-content: space-around;
-    text-align: center;
-    color: black;
-}
-.nav{
-    flex-grow: 2;
-    border: 1px solid rgb(0, 0, 0);
-}
 body{
+
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    font-family: 'Outfit', sans-serif;
+    font-family: 'outfit', sans-serif;
+    
 }
+
+.menuwrapper{
+
+    height: 6vh;
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 2fr;
+    background-color: rgb(0, 0, 0);
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-family: 'Outfit', sans-serif;
+    padding: 5px;
+    align-items: center;
+    width: 90%;
+    font-weight: 600;
+
+}
+
+
+.nav{
+
+    border-right: 1px solid rgb(255, 247, 247);
+
+}
+
 .sport-menu{
+
     width: 100%;
     height: 50px;
-    background-color:#ffd230;
+    background-color:#000000;
+
 }
+
 .sport-menu2{
     margin-left: 20vw;
     margin-top: 1px;
@@ -39,42 +58,137 @@ body{
 }
 
 .up-sport1{
+
     grid-column: 1/3;
+
 }
+
 .small-sport{
+
     grid-column:4/5;
+
 }
+
 .img-up-sport1{
+
     object-fit: cover;
     width: 100%;
     height: 100%;
+
 }
+
 .img-up-sport1:hover{
+
     cursor: pointer;
+
 }
+
 .imgsport{
+
     object-fit: cover;
     width: 100%;
     height: 50%;
+
 }
+
 .imgsport:hover{
+
     cursor: pointer;   
+
 }
+
 p:hover{
+
 cursor: pointer;
 color: blue;
 text-decoration: underline;
+
 }
+
 .up-sport2>h1:hover{
+
 cursor:pointer;
 color: blue;
 text-decoration: underline;
+
 }
+
 .category-sport{
+
     color: rgb(0, 212, 0);
     font-size: 13px;
+
 }
+
+
 .category-sport:hover{
+
     color: rgb(0, 212, 0);
 
+}
+
+.bbclogo{
+
+    display: flex;
+    justify-content: space-around;
+    border-right: 1px solid white;
+
+}
+
+.logobox{
+
+    font-family: 'Outfit',sans-serif;
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    color: black;
+
+}
+
+.homecontainer{
+
+    margin-top: 30px;
+    width: 90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: silver;
+    grid-gap: 1em;
+    
+}
+
+.homebox{ 
+
+    background-color: blanchedalmond;
+
+}
+
+.homebox1{
+
+       background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg");
+
+}
+
+.homebox2{
+
+    background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg");
+    
+}
+
+.homebox3{
+
+    background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg");
+    
+}
+
+.homebox4{
+
+    background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg");
+    
+}
+
+.homebox5{
+
+    background-image: url("https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg");
+    
 }
