--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
@@ -79,11 +79,11 @@ p{
     grid-template-columns: 50vh 50vh;
     grid-template-rows: 50vh 50vh;
 }
-.wrraper{
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    gap: 10px;
+.wrraper_u{
+    display: grid;
+    grid-template-rows: 1fr 2fr ;
+    grid-template-columns: 3fr 2fr;
+    gap: 20px;
 }
 .down{
     padding: 50px 0 0 60px;
