--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
@@ -1,3 +1,212 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@600&display=swap');
+body {
+    background-color: rgb(230, 226, 221);
+    font-family: 'Outfit', sans-serif;
+    font-weight: 900;
+}
+
+a {
+    color: black;
+    font-family: 'Courgette', cursive;
+    text-decoration: none;
+}
+
+a:hover {
+    color: rgb(202, 163, 238);
+    background-color: black;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.bar {
+    display: flex;
+    justify-content: start;
+    min-width: 100%;
+    padding: 10px;
+    gap: 10px;
+}
+
+.nav {
+    padding: 0 10px;
+}
+
+.nav:hover {
+    transform: translateY(-3px);
+}
+
+.logo:hover {
+    transform: translateY(-3px);
+}
+
+.logo>a:hover {
+    background-color: transparent;
+}
+
+.container {
+    height: 200vh;
+    width: 98vw;
+    padding: 0px;
+    margin-left: -2px;
+}
+
+.grid-1 {
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    background-color: gray;
+}
+
+.box1-grid-1 {
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.box3-grid-1 {
+    grid-column: 1/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.box5-grid-1 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.grid-2 {
+    width: 98.5vw;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    gap: 10px;
+    margin-top: 30px;
+}
+
+.box1-grid-2 {
+    grid-column: 1/3;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.box3-grid-2 {
+    grid-row: 2/4;
+}
+
+.box4-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.box5-grid-2 {
+    grid-column: 2/4;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.box1-grid-1 .img {
+    width: 50%;
+    height: 100%;
+}
+
+.box2-grid-1 .img {
+    width: 100%;
+    height: 100%;
+}
+
+.box3-grid-1 .img {
+    width: 50%;
+    height: 100%;
+    margin-right: -60px;
+}
+
+.box4-grid-1 .img {
+    width: 100%;
+    height: 100%;
+}
+
+.box5-grid-1 .img {
+    width: 50%;
+    height: 100%;
+}
+
+.box1-grid-2 .img {
+    width: 50%;
+    height: 100%;
+}
+
+.box2-grid-2 .img {
+    width: 100%;
+    height: 100%;
+}
+
+.box3-grid-2 .img {
+    width: 100%;
+    height: 60%;
+}
+
+.box4-grid-2 .img {
+    width: 50%;
+    height: 100%;
+}
+
+.box5-grid-2 .img {
+    width: 50%;
+    height: 100%;
+}
+
+.img>img {
+    position: relative;
+    border-radius: 3px;
+    width: 90%;
+    height: 90%;
+    left: 30px;
+    top: 10px;
+}
+
+.text {
+    position: relative;
+    right: 20px;
+    width: 48%;
+    height: 80%;
+    margin-left: 5px;
+    margin-top: 3px;
+    cursor: pointer;
+}
+
+span:hover {
+    text-decoration: underline;
+}
+
+.text>p {
+    width: 100%;
+    height: 100%;
+}
+
+span {
+    font-size: x-large;
+    align-content: center;
+}
+
+.textp {
+    padding: 0px;
+    margin-left: 45px;
+    margin-top: -10px;
+    width: 500px;
+}
+
+
 .right{
     display: grid;
     grid-template-columns: 50vh 50vh;
@@ -135,3 +344,69 @@ a:hover{
 body{
     font-family: 'Outfit', sans-serif;
 }
+
+.wrapper{ 
+    display: grid;
+    grid-template-rows: 1fr 2fr ;
+    grid-template-columns: 2fr 2fr 2fr;
+    gap: 20px;
+}
+.box{
+    height:100%;
+    width: 100%;
+    text-align:left;
+}
+.imge {
+   background-color: black;
+    border-radius: 20%;
+}
+.box>p{
+    width: 355px;
+    height: 20px;
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
+.box>h3{
+    position: relative;
+    text-decoration: underline;
+    cursor: pointer;
+    top: 10px;
+    width: 50px;
+    background-color: red
+}
+a{
+    color: black;
+    font-family: 'Courgette', cursive;
+    text-decoration: none;
+  }
+  a:hover{
+    color: rgb(202, 163, 238); 
+    background-color: black;
+    padding: 5px;
+    border-radius: 5px;
+  }
+  .bar{
+  display: flex;
+  justify-content: start;
+  min-width: 100%;
+  padding: 10px;
+  gap: 10px;
+  }
+  .nav{
+    padding: 0 10px;
+  }
+
+  .nav:hover{
+    transform: translateY(-3px);
+   
+  }
+  
+  .logo:hover{
+    transform: translateY(-3px);
+   
+  }
+  .logo>a:hover{
+    background-color: transparent;
+  }
+
