--- a/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
+++ b/01-HTML-CSS/05-grid/BBC-Tamir,Shay,Rasheed/style.css
@@ -79,7 +79,7 @@ p{
     grid-template-columns: 50vh 50vh;
     grid-template-rows: 50vh 50vh;
 }
-.wrrapers{
+.wrraper_u{
     display: grid;
     grid-template-rows: 1fr ;
     grid-template-columns: 3fr 2fr;
@@ -134,7 +134,4 @@ a:hover{
 }
 body{
     font-family: 'Outfit', sans-serif;
-}
-.box_d{
-    padding: 10px;
 }
