--- a/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.scss
+++ b/01-HTML-CSS/06-BEM model/Lior_Or-Will/News.scss
@@ -18,9 +18,8 @@ body{
 .box
 {
     padding: 5px;
-    grid-auto-rows: minmax(10px, auto);
+       grid-auto-rows: minmax(10px, auto);
 }
-
 .box1
 {
     grid-column: 1/4;
@@ -36,20 +35,17 @@ body{
     grid-template-rows: 1fr 1fr 1fr;
 }
 
-.Header1
-{
+.Header1{
     grid-column: 1/2;
     grid-row: 1/3;
     align-items: start;
     font-size: 30px;
     height: 10vh;
-}
-
-.Header1:hover
-{
+:hover{
      cursor: pointer;
      color: blue;
     text-decoration: underline;
+}
 }
 
 .image1
@@ -61,45 +57,20 @@ body{
     align-items: left;
 }
 
-.text1
-{
-    grid-column: 1/2;
-    position: relative;
-    top: -150px;
-    grid-row: 3/4;
-    height: 7vh;
-    font-style: italic;
-    text-align: left;
-    padding-top: 100px;
+.down_{
 
-}
-
-.text19
-
-{
-    position: relative;
-    top: -200px; 
-
-}
-
-
-
-.down_picture
-{
+picture{
     width: 100%;
     height: 15vh;
 }
-
-
-.down_title
-{
+title{
     width: 100%;
     height: 7vh;
     text-align: left;
+    font-size: 20px;
+    font-style: italic;
 }
-
-.down_text
-{
+text{
     width: 60%;
     height: 5vh;
     align-items: center;
@@ -108,26 +79,32 @@ body{
     bottom: 5vh;
     align-content: center;
     text-align: left;
+    font-size: 15px;
+    font-style: italic;
     padding-top: 35px;
-}
 
-.down_title:hover
-{
+}
+title:hover{
      cursor: pointer;
      color: blue;
     text-decoration: underline;
 }
-
-.down_title
-{
-    font-size: 20px;
-    font-style: italic;
 }
 
-.down_text
+.text1
 {
-    font-size: 15px;
+    grid-column: 1/2;
+    position: relative;
+    top: -150px;
+    grid-row: 3/4;
+    height: 7vh;
     font-style: italic;
+    text-align: left;    
+}
+.text19
+{
+    position: relative;
+    top: -200px; 
 }
 
 .BBC_logo
@@ -162,6 +139,7 @@ body{
     position: relative;
     left: -21vw;   
 }
+
 .BBC_LOG_2
 {
     position: relative;
@@ -187,10 +165,8 @@ body{
    position: relative;
    align-items: center; 
    justify-content: space-between;
-}
 
-
-.navbar ul li
+ul li
 {
     list-style: none;
     font-size: 10px;
@@ -198,17 +174,16 @@ body{
     margin: 0 50px;
     position: relative;
 }
-
-.navbar ul li a
+a
 {
-    text-decoration: none;
+  text-decoration: none;
     color:rgb(247, 245, 240);
     font-weight: 200;
     font-size: 2vh;
     text-transform: uppercase;
 }
 
-.navbar ul li ::after
+:after
 {
     content: '';
     height: 5px;
@@ -220,13 +195,13 @@ body{
     transition: 0.8s;
 }
 
-.navbar ul li:hover ::after
+:hover ::after
 {
     width: 100%;
 }
+}
 
-.search_box
-{
+.search_box{
     position: relative;
     left: 80vw;
     top: -1.02vh;
@@ -235,7 +210,12 @@ body{
     background: rgb(10, 10, 10);
     height: 30px;
     width: 15vw;
-}
+    :hover >.search_text
+    {
+        width: 240px;
+        padding: 0 -5px;
+    }
+}    
 
 .Search-btn
 {
@@ -247,12 +227,6 @@ body{
     height: 40px;
     width: 40px;
     top: -0px;
-}
-
-.search_box:hover >.search_text
-{
-    width: 240px;
-    padding: 0 -5px;
 }
 
 .box10
@@ -282,11 +256,10 @@ body{
 .title1
 {
     font-size: 20px;
-}
-
-.title1 :hover
+ :hover
 {
     cursor: pointer;
     color: blue;
    text-decoration: underline;
+}
 }
