--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
@@ -83,10 +83,10 @@
             gap: 1.5rem;
              &__box{
                     display: grid;
-                    grid-template-rows: 55% 15% 18% 12%;
+                    grid-template-rows: 32% 15% 30% 12%;
                     height: 100%;
-                    width: 50%;
-            
+                    width: 100%;
+                    
                   }
             &__img{
                 display: grid;
@@ -149,7 +149,25 @@
                     &--sports{
                         display: grid;
                         border-color: 2px solid black;
+                        background-color: transparent;
+                        background-image: none;
+                        grid-template-columns: 2fr 1fr;
+                        
+                       h2{
+                           grid-row: 0;
+                           grid-column: 0;
+                       } 
+                       h3{
+                           grid-column: 2;
+                           grid-row: 2;
 
+                       }
+                       p{
+                        grid-column: 2;
+                        grid-row: 3;   
+                       }
+                       
+                        
                     }
                   }
             }
