--- a/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
+++ b/01-HTML-CSS/06-BEM model/ido, shay, ohad/style.scss
@@ -81,9 +81,14 @@
             color: black;
             height: 70vh;
             gap: 1.5rem;
+            &--grid{
+                display: grid;
+                grid-template-columns: 4fr 1fr;
+                grid-template-rows: 4fr;
+            }
              &__box{
                     display: grid;
-                    grid-template-rows: 32% 15% 30% 12%;
+                    grid-template-rows: 40% 25% 30% 12%;
                     height: 100%;
                     width: 100%;
                     
@@ -152,19 +157,27 @@
                         background-color: transparent;
                         background-image: none;
                         grid-template-columns: 2fr 1fr;
-                        
+                        grid-template-rows: repeat(4,1fr);
+                        width: 100%;
+                        img{
+                            grid-column: 1/4;
+                            grid-row: 1/5;
+                        }
                        h2{
-                           grid-row: 0;
-                           grid-column: 0;
+                           grid-row: 1;
+                           grid-column: 2;
+                           padding-left: 10px;
                        } 
                        h3{
                            grid-column: 2;
-                           grid-row: 2;
-
+                           grid-row: 3/4;
+                           padding-left: 10px;
+                           
                        }
                        p{
                         grid-column: 2;
-                        grid-row: 3;   
+                        grid-row: 4/5;   
+                        padding-left: 10px;
                        }
                        
                         
