--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/index.scss
@@ -1,6 +1,8 @@
 body{
+
     min-width: 1900px;
     margin: 0px;
+
     .menu{
         display: grid;
         grid-template-columns: 25% 9% 10% 9% 10% 10% 10%;
@@ -163,7 +165,220 @@ body{
     }
 }
 
+// ****  MICHAEL HOME CONTAINER ****
 
+.homecontainer {
+
+    padding: 5px;
+    margin-top: 30px;
+    width: 75%;
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 1em;
+    color: white;
+    grid-auto-flow: column;
+    height: 450px;
+
+}
+
+
+.homebox {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 10px;
+    background: radial-gradient(white,grey);
+    background-size: cover;
+    text-align: start;
+    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+
+}
+
+.homebox p {
+    margin: 5px;
+}
+
+.homebox:hover{
+
+    cursor: pointer;
+    opacity: 0.8;
+    transition: 0.8s;
+
+}
+
+.homebox1 {
+
+    grid-row: 1/3;
+    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/25/3157c030-c1e3-4afc-b825-93ad2d5d516c.jpg);
+    background-size: cover;
+
+}
+
+.homebox2 {
+
+
+
+    background-image: url(https://ichef.bbci.co.uk/news/976/cpsprodpb/58DC/production/_121784722_migrants4.jpg);
+    background-size: cover;
+
+}
+
+.homebox3 {
+
+    background-image: url(https://ichef.bbci.co.uk/live-experience/cps/624/cpsprodpb/vivo/live/images/2021/11/24/f1cc5ab7-b958-4a01-8696-4a292bc8fcbd.jpg);
+    background-size: cover;
+
+}
+
+.homebox4 {
+
+
+    background-image: url(https://ychef.files.bbci.co.uk/1280x720/p0b576yw.webp);
+    background-size: cover;
+
+}
+
+.homebox5 {
+
+    background-image: url(https://ichef.bbci.co.uk/images/ic/832xn/p09ydv2w.jpg);
+    background-size: cover;
+}
+
+
+.homebox :nth-child(1) {
+
+    font-size: 20px;
+    font-weight: 700;
+
+}
+
+.homebox1 h1 {
+
+    font-size: 60px;
+
+}
+
+.homebox1 :nth-child(3) {
+
+
+    border-left: 5px solid red;
+
+}
+
+.homebox2 :nth-child(2) {
+
+    border-left: 5px solid red;
+}
+
+.homebox3 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+.homebox4 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+.homebox5 :nth-child(2) {
+
+    border-left: 5px solid red;
+
+}
+
+// **** MIDDLE BAR ****
+
+.middlebar {
+
+    display: flex;
+    justify-content: start;
+    width: 75%;
+
+
+    >h1 {
+
+    border-left: 6px solid red;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+
+    }
+
+}
+
+
+// **** HOME NEWS CONTAINER ****
+
+.homenews {
+
+    display: flex;
+    justify-content: space-between;
+    width: 75%;
+
+}
+
+.newsbox {
+
+    display: flex;
+    flex-direction: column;
+    max-width: 32%;
+    height: 450px;
+
+    h1{
+        font-size: 27px;
+    }
+
+    h1:hover{
+        cursor: pointer;
+        text-decoration: underline;
+    }
+
+    .category{
+
+        border-left: 4px solid red;
+        padding-left: 10px;
+        color: rgb(98, 94, 90);
+
+    }
+
+}
+
+.newsboximg{
+
+    background: radial-gradient(white, gray);
+
+    img{
+    
+        width: 100%;
+        height: 100%;
+
+    }
+
+    img:hover{
+
+        transition: 0.8s;
+        cursor: pointer;
+        opacity: 0.8;
+    }
+    
+}
+
+
+.newsboxtext {
+
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+
+    
 
 
 
