--- a/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
+++ b/01-HTML-CSS/06-BEM model/michael,marina,rasheed/style.scss
@@ -1,114 +1,168 @@
-body {
+body{
 
-    font-family: 'outfit', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: rgb(252, 252, 252);
+    min-width: 1900px;
+    margin: 0px;
 
-}
-
-// **** NAVBAR ****
-
-.navbar {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-    height: 8vh;
-    width: 100%;
-    flex-shrink: 0;
-
-    .bbclogo {
-
-        display: flex;
-        justify-content: center;
-        flex-shrink: 0;
-        height: 5vh;
-        min-width: fit-content;
-        margin-right: 10px;
-
-    }
-
-    .pages {
-
-        display: flex;
-        justify-content: center;
-
-        a {
-
-            display: flex;
-            justify-content: center;
-            text-decoration: none;
-            color: white;
-            font-size: 25px;
-            font-weight: 300px;
-            margin-inline-end: 15px;
-            width: 200px;
-
+    .menu{
+        display: grid;
+        grid-template-columns: 25% 9% 10% 9% 10% 10% 10%;
+        height:31px;
+    
+        &__logo{
+            position: absolute;
+            width: 80px;
+            height: auto;
+            left: 293px;
+            top: -2.4%;   
         }
-
-        .navbox {
-
-            display: flex;
-            align-items: center;
-            border-left: 4px solid white;
-            border-bottom: 4px solid black;
-            height: 7vh;
-
-        }
-
-        .signin:hover {
-
+    
+        
+        &__logo:hover{
             cursor: pointer;
-            border-bottom: 4px solid rgb(135, 61, 9);
-
         }
-
-        .home:hover {
-
-            border-bottom: 4px solid rgb(208, 45, 45);
-
+    
+    
+        &__search{
+            position: relative;
+            top: 15%;
+            left: 10%;
         }
-
-        .news:hover {
-
-            border-bottom: 4px solid rgb(67, 67, 232);
+    
+    
+        &__signIn, &__home, &__news,
+        &__sport, &__reel{
+           font-family: sans-serif;    
         }
-
-        .sport:hover {
-
-            border-bottom: 4px solid rgb(168, 191, 51);
+    
+        &__signIn:hover{
+            border-bottom: 4px solid blue;   
         }
-
+        
+        &__nav.news:hover{
+            border-bottom: 4px solid  rgb(185, 31, 31);
+        }
+        
+        &__sport:hover{
+            border-bottom: 4px solid  rgb(240, 225, 27);
+        }
+        
+        &__reel:hover{
+            border-bottom: 4px solid  rgb(7, 29, 226);
+        }  
+    
+        &__nav.home:hover, &__signIn:hover,
+        &__nav.news:hover, 
+        &__sport:hover, &__reel:hover{
+        border-bottom: 4px solid  rgb(23, 23, 24);
+        cursor: pointer;
+        }
+    
+        &__nav{
+            display: flex;
+            height: 30px;
+            width: auto;
+            align-items: center;
+            justify-content: center;
+            border-right: 1px solid gray;
+            text-decoration:none;
+        
+            a {
+                text-decoration: none;
+                color: black;
+            }
+            
+        }
+        
     }
-
-    .searchbox {
-
-        margin-left: 20px;
-        display: flex;
-        justify-content: center;
-
+    
+    
+    
+    .red-strap{
+        display: grid;
+        grid-template-columns: 22.2%;
+        background-color: rgb(173, 16, 16);
+        justify-items: end;
+       
+        &__news{
+            color: white;
+            font-size: 45px;
+            font-family: sans-serif;
+        }
+       
     }
-
-}
-
-// **** TOP BAR ****
-
-.topbar {
-
-    width: 75%;
-    height: 50px;
-    display: flex;
-    justify-content: space-between;
-
-    .date {
-
-        color: rgb(154, 152, 152);
+    
+    
+    
+    .links{
+        display: grid;
+        grid-template-columns: 17.5% 9% 9% 8% 8% 8% 8% 8% 8%;
+        background-color: rgb(173, 16, 16);
+        grid-template-rows: 19px;
+        justify-items: end;
+    
+        &__links>.home, &__links>.coronavirus,
+        &__links>.climate,
+        &__links>.video, &__links>.world, 
+        &__links>.business,
+        &__links>.tech, &__links>.science, 
+        &__links>.stories{
+        color: white;
+        font-family: sans-serif;
+        }
+    
+        &__links>.stories:hover, &__links>.science:hover, 
+        &__links>.tech:hover,
+        &__links>.business:hover, &__links>.world:hover, 
+        &__links>.video:hover,
+        &__links>.climate:hover, &__links>.coronavirus:hover, 
+        &__links>.home:hover{
+        border-bottom: 4px solid white;
+        cursor: pointer;
+        }
+    
     }
-
+    
+    
+    
+    .wrapper{
+        width: 70%;
+        display: grid;
+        grid-template-columns: repeat(5, 3fr);
+        grid-template-rows: minmax(100px, auto);
+        grid-gap: 1em;
+        padding-left: 17em;
+        justify-items: start;
+    
+        &__div{
+            padding: 1em;
+        }
+        
+    
+        &__grid-2{
+            grid-column: 2/4;
+        }
+    
+        &__img{
+            width: 100%;
+            height: auto;
+        }
+        
+        &__h1, &__p {
+            font-size: 22px;
+            font-family: sans-serif;
+        }
+        
+        &__p {
+            font-size: 16px;
+        }
+    
+        &__title a:hover,
+        &__country a:hover {
+        text-decoration: underline;
+        color: rgb(63, 173, 236);
+        }
+    
+    }
 }
 
 // ****  MICHAEL HOME CONTAINER ****
@@ -322,4 +376,16 @@ body {
         align-items: flex-start;
         justify-content: space-between;
     }
+
+
+    
+
+
+
+
+
+
+
+
+
 
