--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
@@ -1,12 +1,18 @@
-header{
+.header{
     background-color: black;
-    width: 220px;
+    width: 100%;
+    display: ;
+    position: fixed;
 
-    &logo{
-    width: fit-content;
-    height: 200px;
+    &--logo{
+    color: white;
+    width: 33vw;
+    display: flex;
+    font-family: 'Bangers', cursive;
+    font-size: 10vw;
+    align-items: center;
     }
-    &navbar{
+    &--navbar{
     width: 100%;
     height: 20px;
     
@@ -17,6 +23,8 @@ header{
 }
 body{
     background-color: rgb(88, 42, 42);
+}
+
 
 .socialmedia{
         position: absolute;
@@ -27,4 +35,3 @@ body{
         width: 5px;
     }
     }
-}
