--- a/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
+++ b/01-HTML-CSS/06-BEM model/John Etan & Yoel/style.scss
@@ -1,26 +1,36 @@
 .header{
     background-color: black;
     width: 100%;
-    display: ;
-    position: fixed;
+    position: absolute;
 
     &--logo{
-    color: white;
-    width: 33vw;
-    display: flex;
+    color: #ffffff;
+    width: 66vw;
+    position: relative;
     font-family: 'Bangers', cursive;
     font-size: 10vw;
     align-items: center;
-    }
-    &--navbar{
-    width: 100%;
-    height: 20px;
-    
-    &__item{
-        height: 10px;
-    }
+    padding-left: 30vw;
     }
 }
+    .navbar{
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    &--item{
+        margin-right: 2vw;
+        height: 1vh;
+        display: flex;
+        color: white;
+    
+    }
+    &--item:hover{
+        cursor: pointer;
+    }
+    }
 body{
     background-color: rgb(88, 42, 42);
 }
